ajustes em toda a versão desktop

--- a/cases/case-mascaras.html
+++ b/cases/case-mascaras.html
@@ -4,18 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>
-			Websites de Alta Performance | Agência Poussée | Nossa História
-		</title>
+		<title>Nossa História | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br./assets/img/icon/favicon-32x32.png"
+			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
 			type="image/x-icon"
 		/>
+		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<link rel="stylesheet" href="../assets/style/style.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
@@ -31,7 +30,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
 		/>
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
@@ -80,7 +78,7 @@
 									</li>
 									<li class="p-2 nav-item">
 										<a href="../o-que-fazemos/desenvolvimento.html"
-											>Desenvolvimento</a
+											>Crescimento</a
 										>
 									</li>
 									<li class="p-2 nav-item">
@@ -440,7 +438,7 @@
 								<a
 									href="https://blog.poussee.com.br/inbound-marketing/"
 									target="_blank"
-									style="color: #66bc66"
+									style="color: var(--light-pink); text-decoration: underline"
 									><strong>marketing</strong></a
 								>
 								sempre com foco em performance. <br /><br />Independente da sua
@@ -452,7 +450,7 @@
 								<a
 									href="https://web.whatsapp.com/send?phone=5511968864108&text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Ag%C3%AAncia%20Pouss%C3%A9e,%20estou%20entrando%20em%20contato%20pelo%20website."
 									target="_blank"
-									style="color: #66bc66"
+									style="color: var(--light-pink); text-decoration: underline"
 									>Envie uma mensagem</a
 								>
 								agora mesmo e impulsione o sucesso da sua empresa!
@@ -479,16 +477,13 @@
 				</div>
 				<div class="row text-center pt-5 footer-size">
 					<div class="col-sm text-center">
-						<p><a href="../o-que-fazemos/">O que fazemos</a></p>
+						<p><a href="../index.html#solucoes">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
 						<p><a href="../quem-somos/nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
 						<p><a href="./cases.html">Nosos cases</a></p>
-					</div>
-					<div class="col-sm text-center">
-						<p><a href="https://blog.poussee.com.br/">Blog</a></p>
 					</div>
 					<div class="col-sm text-center">
 						<p><a href="../contato.html">Contato</a></p>
