--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Websites de Alta Performance | Agência Poussée</title>
+		<title>Home | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
@@ -14,6 +14,7 @@
 			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
 			type="image/x-icon"
 		/>
+		<link rel="shortcut icon" href="./assets/img/favicon.ico" />
 		<link rel="stylesheet" href="./assets/style/style.css" />
 		<link rel="stylesheet" href="./Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="./Content/Plugins/Slick/slick-theme.css" />
@@ -29,7 +30,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
 		/>
-		<link rel="shortcut icon" href="./assets/img/favicon.ico" />
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
@@ -74,9 +74,7 @@
 										<a href="o-que-fazemos/branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/desenvolvimento.html"
-											>Desenvolvimento</a
-										>
+										<a href="o-que-fazemos/desenvolvimento.html">Crescimento</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="o-que-fazemos/e-commerce.html">E-commerce</a>
@@ -168,7 +166,7 @@
 							</h1>
 							<p class="home-text">
 								Qual é o seu objetivo hoje? Seja qual for, temos uma solução
-								personalizada para te ajudar a torná-lo realidade. Conheça
+								personalizada para te ajudar a torná-la realidade. Conheça
 								nossos serviços e saiba como podemos transformar seus
 								resultados.
 							</p>
@@ -389,7 +387,7 @@
 
 			<section class="marcas">
 				<div class="container">
-					<p class="subtitle">Marcas</p>
+					<p class="subtitle">ALGUMAS MARCAS</p>
 					<hr />
 					<p class="home-text">que ajudamos a crescer</p>
 					<div class="montadoras logos col-12 text-center">
@@ -443,7 +441,7 @@
 								performance, elevamos empresas a um novo patamar de sucesso.
 							</p>
 							<p class="home-text pt-5">
-								<a href="./nossa-historia.html" class="btn-black"
+								<a href="./quem-somos/nossa-historia.html" class="btn-black"
 									>Veja mais <img src="./assets/img/arrow-black.png" alt="Seta"
 								/></a>
 							</p>
@@ -469,7 +467,7 @@
 								especializações distintas e, juntos, fazemos a diferença.
 							</p>
 							<p class="home-text pt-5">
-								<a href="./nosso-time.html" class="btn-green"
+								<a href="./quem-somos/nosso-time.html" class="btn-green"
 									>Veja mais <img src="./assets/img/arrow.png" alt="Seta"
 								/></a>
 							</p>
@@ -514,7 +512,7 @@
 										B2B na Black Friday.
 									</p>
 									<br />
-									<a href="#" class="btn-black"
+									<a href="./cases/case-distribuidora.html" class="btn-black"
 										>Ver case completo
 										<img src="./assets/img/arrow-black.png" alt="Seta"
 									/></a>
@@ -538,7 +536,7 @@
 											6 meses</span
 										>
 									</p>
-									<a href="#" class="btn-green"
+									<a href="./cases/case-contact-center.html" class="btn-green"
 										>Ver case completo
 										<img src="./assets/img/arrow.png" alt="Seta"
 									/></a>
@@ -616,10 +614,10 @@
 						<p><a href="#solucoes">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="./nossa-historia.html">Quem somos</a></p>
+						<p><a href="./quem-somos/nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#cases">Nosos cases</a></p>
+						<p><a href="./cases/cases.html">Nosos cases</a></p>
 					</div>
 					<div class="col-sm text-center">
 						<p><a href="./contato.html">Contato</a></p>
