--- a/cases/case-contabil.html
+++ b/cases/case-contabil.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>
-			Websites de Alta Performance | Agência Poussée | Nossa História
+			Nossa Históriae | Agência Poussée
 		</title>
 		<meta
 			name="description"
@@ -13,9 +13,10 @@
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br./assets/img/icon/favicon-32x32.png"
+			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
 			type="image/x-icon"
 		/>
+		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<link rel="stylesheet" href="../assets/style/style.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
@@ -31,7 +32,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
 		/>
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
@@ -80,7 +80,7 @@
 									</li>
 									<li class="p-2 nav-item">
 										<a href="../o-que-fazemos/desenvolvimento.html"
-											>Desenvolvimento</a
+											>Crescimento</a
 										>
 									</li>
 									<li class="p-2 nav-item">
@@ -354,15 +354,21 @@
 								de sucesso.
 							</h2>
 							<p class="home-text pt-3">
-								<a href="./cases.html" class="btn-green"
+								<!-- <a href="./cases.html#cases-row" class="btn-green"
 									>Confira mais cases
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
-								<br />
+								<br /> -->
 								<a href="../contato.html" class="btn-green"
 									>Quero falar com vocês
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
+								<br /><br />
+								<span class="diagnostico">
+									<a href="./cases.html#cases-row" class="btn-green"
+										>Confira mais cases
+									</a>
+								</span>
 							</p>
 						</div>
 					</div>
@@ -379,16 +385,13 @@
 				</div>
 				<div class="row text-center pt-5 footer-size">
 					<div class="col-sm text-center">
-						<p><a href="../o-que-fazemos/">O que fazemos</a></p>
+						<p><a href="../index.html#solucoes">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
 						<p><a href="../quem-somos/nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
 						<p><a href="./cases.html">Nosos cases</a></p>
-					</div>
-					<div class="col-sm text-center">
-						<p><a href="https://blog.poussee.com.br/">Blog</a></p>
 					</div>
 					<div class="col-sm text-center">
 						<p><a href="../contato.html">Contato</a></p>
