--- a/contato.html
+++ b/contato.html
@@ -4,18 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>
-			Websites de Alta Performance | Agência Poussée | Nossa História
-		</title>
+		<title>Contato | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br./assets/img/icon/favicon-32x32.png"
+			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
 			type="image/x-icon"
 		/>
+		<link rel="shortcut icon" href="./assets/img/favicon.ico" />
 		<link rel="stylesheet" href="./assets/style/style.css" />
 		<link rel="stylesheet" href="./Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="./Content/Plugins/Slick/slick-theme.css" />
@@ -31,7 +30,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
 		/>
-		<link rel="shortcut icon" href="./assets/img/favicon.ico" />
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
@@ -76,9 +74,7 @@
 										<a href="o-que-fazemos/branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/desenvolvimento.html"
-											>Desenvolvimento</a
-										>
+										<a href="o-que-fazemos/desenvolvimento.html">Crescimento</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="o-que-fazemos/e-commerce.html">E-commerce</a>
@@ -165,24 +161,24 @@
 							<form action="" class="contact-form">
 								<div class="form-content-container">
 									<div class="column-div">
-										<input type="text" />
 										<label for="">Nome</label>
+										<input type="text" />
 									</div>
 									<div class="column-div">
-										<input type="text" />
 										<label for="">Telefone</label>
+										<input type="text" />
 									</div>
 									<div class="column-div">
-										<input type="text" />
 										<label for="">E-mail</label>
-									</div>
-									<div class="column-div">
 										<input type="text" />
-										<label for="">Empresa</label>
 									</div>
 									<div class="column-div">
-										<textarea name="" id="" cols="30" rows="10"></textarea>
+										<label for="">Empresa</label>
+										<input type="text" />
+									</div>
+									<div class="column-div">
 										<label for="">Mensagem</label>
+										<textarea name="" id="" cols="30" rows="10"></textarea>
 									</div>
 									<div class="inline-div">
 										<div class="contact-checkbox">
@@ -232,7 +228,7 @@
 							<p class="subtitle">Fale com a gente</p>
 							<hr />
 							<h2 class="home-title">
-								e descubrao o que podemos <br />
+								e descubra como podemos <br />
 								impulsionar seus resultados
 							</h2>
 							<br />
@@ -275,19 +271,16 @@
 				</div>
 				<div class="row text-center pt-5 footer-size">
 					<div class="col-sm text-center">
-						<p><a href="#">O que fazemos</a></p>
+						<p><a href="./index.html#solucoes">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Quem somos</a></p>
+						<p><a href="./quem-somos/nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
+						<p><a href="./cases/cases.html">Nosos cases</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
-					</div>
-					<div class="col-sm text-center">
-						<p><a href="#">Contato</a></p>
+						<p><a href="./contato.html">Contato</a></p>
 					</div>
 				</div>
 				<div class="row">
