--- a/o-que-fazemos/desenvolvimento.html
+++ b/o-que-fazemos/desenvolvimento.html
@@ -4,18 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>
-			Websites de Alta Performance | Agência Poussée | Desenvolvimento
-		</title>
+		<title>Crescimento | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br../assets/img/icon/favicon-32x32.png"
+			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
 			type="image/x-icon"
 		/>
+		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<link rel="stylesheet" href="../assets/style/style.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
@@ -31,7 +30,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
 		/>
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
@@ -79,7 +77,7 @@
 										<a href="./branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="desenvolvimento.html">Desenvolvimento</a>
+										<a href="desenvolvimento.html">Crescimento</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="e-commerce.html">E-commerce</a>
@@ -146,7 +144,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 col-12 text-left text-white">
-							<h1 class="title-service">Desenvolvimento</h1>
+							<h1 class="title-service">Crescimento</h1>
 							<a
 								href="https://api.whatsapp.com/send?phone=5511968864108"
 								target="_blank"
@@ -154,7 +152,9 @@
 								>Solicite um orçamento
 								<img src="../assets/img/arrow.png" alt="Seta"
 							/></a>
-							<a href="#" class="btn-white"
+							<a
+								href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"
+								class="btn-white"
 								>Receba um diagnóstico gratuito
 								<img src="../assets/img/arrow-white.png" alt="Seta"
 							/></a>
@@ -168,7 +168,7 @@
 				<div class="container">
 					<div class="row" style="align-items: center">
 						<div class="col-md-6 col-12 text-left">
-							<p class="subtitle">Desenvolvimento</p>
+							<p class="subtitle">Crescimento</p>
 							<hr />
 						</div>
 					</div>
@@ -293,11 +293,15 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 col-12 text-center text-white">
-							<a href="#" class="btn-green"
+							<a
+								href="https://api.whatsapp.com/send?phone=5511968864108"
+								class="btn-green"
 								>Solicite um orçamento
 								<img src="../assets/img/arrow.png" alt="Seta"
 							/></a>
-							<a href="#" class="btn-white"
+							<a
+								href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"
+								class="btn-white"
 								>Receba um diagnóstico gratuito
 								<img src="../assets/img/arrow-white.png" alt="Seta"
 							/></a>
@@ -334,7 +338,7 @@
 										B2B na Black Friday.
 									</p>
 									<br />
-									<a href="#" class="btn-black"
+									<a href="../cases/case-distribuidora.html" class="btn-black"
 										>Confira
 										<img src="../assets/img/arrow-black.png" alt="Seta"
 									/></a>
@@ -384,19 +388,16 @@
 				</div>
 				<div class="row text-center pt-5 footer-size">
 					<div class="col-sm text-center">
-						<p><a href="#">O que fazemos</a></p>
+						<p><a href="../index.html#solucoes">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Quem somos</a></p>
+						<p><a href="../quem-somos/nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
+						<p><a href="../cases/cases.html">Nosos cases</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
-					</div>
-					<div class="col-sm text-center">
-						<p><a href="#">Contato</a></p>
+						<p><a href="../contato.html">Contato</a></p>
 					</div>
 				</div>
 				<div class="row">
