--- a/quem-somos/nossa-historia.html
+++ b/quem-somos/nossa-historia.html
@@ -4,18 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>
-			Websites de Alta Performance | Agência Poussée | Nossa História
-		</title>
+		<title>Nossa História | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br./assets/img/icon/favicon-32x32.png"
+			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
 			type="image/x-icon"
 		/>
+		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<link rel="stylesheet" href="../assets/style/style.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
@@ -31,7 +30,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
 		/>
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
@@ -80,7 +78,7 @@
 									</li>
 									<li class="p-2 nav-item">
 										<a href="../o-que-fazemos/desenvolvimento.html"
-											>Desenvolvimento</a
+											>Crescimento</a
 										>
 									</li>
 									<li class="p-2 nav-item">
@@ -156,8 +154,8 @@
 							<hr />
 							<h1>
 								Uma agência <br />
-								full service de <br />
-								alta performance
+								apaixonada por fazer <br />
+								marcas crescer
 							</h1>
 							<a href="../contato.html" class="btn-green"
 								>Fale com a gente <img src="../assets/img/arrow.png" alt="Seta"
@@ -276,7 +274,8 @@
 							<p class="subtitle">Seja Poussée</p>
 							<hr />
 							<h2 class="home-title">
-								Entre em contato e saiba mais sobre esta solução.
+								Entre em contato e veja como podemos ajudar seu negócio a
+								crescer.
 							</h2>
 							<p class="home-text pt-3">
 								<a href="../contato.html" class="btn-green"
@@ -299,19 +298,16 @@
 				</div>
 				<div class="row text-center pt-5 footer-size">
 					<div class="col-sm text-center">
-						<p><a href="#">O que fazemos</a></p>
+						<p><a href="../index.html#solucoes">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Quem somos</a></p>
+						<p><a href="./nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
+						<p><a href="../cases/cases.html">Nosos cases</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
-					</div>
-					<div class="col-sm text-center">
-						<p><a href="#">Contato</a></p>
+						<p><a href="../contato.html">Contato</a></p>
 					</div>
 				</div>
 				<div class="row">
