ajustes desktop e modais e função de formulario

--- a/cases/case-contabil.html
+++ b/cases/case-contabil.html
@@ -4,19 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>
-			Nossa Históriae | Agência Poussée
-		</title>
+		<title>Case Contábil | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
+			href="../assets/img/favicon-32x32.png"
 			type="image/x-icon"
 		/>
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
+		<link rel="shortcut icon" href="../assets/img/favicon-32x32.png" />
 		<link rel="stylesheet" href="../assets/style/style.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
@@ -80,7 +78,7 @@
 									</li>
 									<li class="p-2 nav-item">
 										<a href="../o-que-fazemos/desenvolvimento.html"
-											>Crescimento</a
+											>Desenvolvimento</a
 										>
 									</li>
 									<li class="p-2 nav-item">
