--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
+			href="./assets/img/favicon-32x32.png"
 			type="image/x-icon"
 		/>
-		<link rel="shortcut icon" href="./assets/img/favicon.ico" />
+		<link rel="shortcut icon" href="./assets/img/favicon-32x32.png" />
 		<link rel="stylesheet" href="./assets/style/style.css" />
 		<link rel="stylesheet" href="./Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="./Content/Plugins/Slick/slick-theme.css" />
@@ -74,7 +74,9 @@
 										<a href="o-que-fazemos/branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/desenvolvimento.html">Crescimento</a>
+										<a href="o-que-fazemos/desenvolvimento.html"
+											>Desenvolvimento</a
+										>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="o-que-fazemos/e-commerce.html">E-commerce</a>
@@ -107,7 +109,9 @@
 								>
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
-										<a href="./quem-somos/">Nossa história</a>
+										<a href="./quem-somos/nossa-historia.html"
+											>Nossa história</a
+										>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="./quem-somos/nosso-time.html">Nosso time</a>
@@ -162,7 +166,7 @@
 							<p class="subtitle">Soluções</p>
 							<hr />
 							<h1 class="title-content">
-								Como atuamos no desenvolvimento de marcas
+								Como atuamos no crescimento de marcas
 							</h1>
 							<p class="home-text">
 								Qual é o seu objetivo hoje? Seja qual for, temos uma solução
