--- a/o-que-fazemos/desenvolvimento.html
+++ b/o-que-fazemos/desenvolvimento.html
@@ -4,17 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Crescimento | Agência Poussée</title>
+		<title>Desenvolvimento | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
+			href="../assets/img/favicon-32x32.png"
 			type="image/x-icon"
 		/>
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
+		<link rel="shortcut icon" href="../assets/img/favicon-32x32.png" />
 		<link rel="stylesheet" href="../assets/style/style.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
@@ -77,7 +77,7 @@
 										<a href="./branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="desenvolvimento.html">Crescimento</a>
+										<a href="desenvolvimento.html">Desenvolvimento</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="e-commerce.html">E-commerce</a>
@@ -144,7 +144,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 col-12 text-left text-white">
-							<h1 class="title-service">Crescimento</h1>
+							<h1 class="title-service">Desenvolvimento</h1>
 							<a
 								href="https://api.whatsapp.com/send?phone=5511968864108"
 								target="_blank"
@@ -168,7 +168,7 @@
 				<div class="container">
 					<div class="row" style="align-items: center">
 						<div class="col-md-6 col-12 text-left">
-							<p class="subtitle">Crescimento</p>
+							<p class="subtitle">Desenvolvimento</p>
 							<hr />
 						</div>
 					</div>
