--- a/o-que-fazemos/e-commerce.html
+++ b/o-que-fazemos/e-commerce.html
@@ -4,17 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>E-commerce | Agência Poussée </title>
+		<title>E-commerce | Agência Poussée</title>
 		<meta
 			name="description"
 			content="Somos especialistas em Website de alta performance, Gestão de Marcas e Marketing de Resultados. Se você quer vender mais, nós queremos te conhecer.​"
 		/>
 		<link
 			rel="shortcut icon"
-			href="https://poussee.com.br/assets/img/icon/favicon-32x32.png"
+			href="../assets/img/favicon-32x32.png"
 			type="image/x-icon"
 		/>
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
+		<link rel="shortcut icon" href="../assets/img/favicon-32x32.png" />
 		<link rel="stylesheet" href="../assets/style/style.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
 		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
@@ -77,7 +77,7 @@
 										<a href="./branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="desenvolvimento.html">Crescimento</a>
+										<a href="desenvolvimento.html">Desenvolvimento</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="e-commerce.html">E-commerce</a>
@@ -233,7 +233,7 @@
 								Implantação do e-commerce
 							</p>
 							<p class="text-solution">
-								desenvolvimento da loja virtual em uma plataforma responsiva.
+								Desenvolvimento da loja virtual em uma plataforma responsiva.
 							</p>
 						</div>
 						<div class="col-sm col-12 item-solution">
