ajustes contato imagem e formulario e modal

--- a/contato.html
+++ b/contato.html
@@ -228,7 +228,7 @@
 								</button>
 							</form>
 						</div>
-						<div class="col-md-6 col-12">
+						<div class="col-md-6 col-12 contact-form-image">
 							<img
 								src="./assets/img/contato/contato-imagem.png"
 								alt="Imagem de café"
