--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		<main>
 			<section class="solucoes" id="solucoes">
 				<div class="container">
-					<div class="row pb-5">
+					<div class="row pb-5 break-row-991">
 						<div class="col-md-4 col-12 text-left">
 							<p class="subtitle">Soluções</p>
 							<hr />
